# aws-learn

./: pyproject.toml
.vim/: coc-settings.json
aws_learn/: __init__.py  kafka.py  requirements.txt
aws_learn/aws_learn/: __init__.py
aws_learn/aws_learn/chalice/: app.py
aws_learn/aws_learn/kafka/: kafka.py
aws_learn/aws_learn/message_store/: MessageStore.py  SqlMessageStore.py
aws_learn/aws_learn/sqs/: Constants.py  sqs.py
aws_learn/kafka/: Constants.py  __init__.py  kafka.py
aws_learn/sql/: Constants.py  __init__.py
aws_learn/tests/: test_aws_learn.py
chalice/: app.py  requirements.txt
chalice/.chalice/: config.json
chalice/.chalice/deployed/: dev.json
